[project]
name = "linguister-gui"
version = "0.1.0"
description = ""
authors = [
    {name = "CongCoV", email = "cong.lv.yx@gmail.com"},
]
dependencies = [
    "linguister~=0.2",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
